<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LyLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/usuario_email"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/purple_700"
        app:endIconTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingTop="30dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LyLoginContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/pass"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/purple_700"
        app:endIconTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LyLoginEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_700">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingTop="30dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/recordarPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/purple_700"
        android:text="@string/recordar"
        app:layout_constraintStart_toStartOf="@+id/LyLoginContraseña"
        app:layout_constraintTop_toBottomOf="@+id/LyLoginContraseña" />

    <Button
        android:id="@+id/iniciarBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:text="@string/iniciar"
        android:textAllCaps="false"
        app:cornerRadius="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrar"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="1dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleBtn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:buttonSize="wide"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iniciarBtn" />


    <CheckedTextView
        android:id="@+id/olvidePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/olvide_mi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordarPass" />

    <CheckedTextView
        android:id="@+id/registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/olvidePass" />

</androidx.constraintlayout.widget.ConstraintLayout>