<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.RegistrarActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/nombre"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/apellido"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LyNombre">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="lastName"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyLocalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/localidad"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LyApellido">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLocalidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/direccion"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LyLocalidad">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="none"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/telefono"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LyDireccion">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:ems="10"
                android:inputType="phone"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyRegistrarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LyTextTelefono">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRegistrarEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/pass"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LyRegistrarEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_700"
            app:counterEnabled="true"
            app:counterMaxLength="8">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart"
                android:maxLength="8"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyRepContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/repetir_pass"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LyContraseña"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_700">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRepContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart"
                android:maxLength="8"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/la_contrase_debe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LyRepContraseña" />

        <CheckBox
            android:id="@+id/checkTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/purple_700"
            android:text="@string/terminos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <CheckedTextView
                android:id="@+id/linkTerminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/politica_privacidad"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkTerminos" />

            <Button
                android:id="@+id/updateDataBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center|center_horizontal"
                android:text="@string/enviar"
                android:textAllCaps="false"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linkTerminos"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



