<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".config.ConfigChangePassFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LyViejaContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/oldPass"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/purple_700"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:endIconTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_700">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextOldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="8"
                android:paddingStart="0dp"
                android:paddingTop="30dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LyContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/newPass"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/purple_700"
        app:endIconTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LyViejaContraseña"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_700"
        app:counterEnabled="true"
        app:counterMaxLength="8">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingTop="30dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:textAlignment="viewStart"
            android:maxLength="8"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LyRepContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/repetir_pass"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/purple_700"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LyContraseña"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_700">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextReNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingTop="30dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:textAlignment="viewStart"
            android:maxLength="8"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/la_contrase_debe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LyRepContraseña" />

        <Button
            android:id="@+id/updateDataBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center|center_horizontal"
            android:text="@string/updatePass"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>